[gd_scene load_steps=11 format=3 uid="uid://uvxjnidohd5v"]

[ext_resource type="Script" path="res://scenes/cobalt_ore.gd" id="1_2h2iy"]
[ext_resource type="Texture2D" uid="uid://gntyv3hcc3ba" path="res://art/mainart/cobalt.png" id="2_awg00"]
[ext_resource type="Texture2D" uid="uid://cnr8nf2cs2r3p" path="res://art/terrain/ironore.png" id="3_21gcd"]
[ext_resource type="Script" path="res://scenes/pickableareairon.gd" id="4_30e3k"]
[ext_resource type="PackedScene" uid="uid://b3n7abpn4yivd" path="res://scenes/iron_collectable.tscn" id="5_tkbfo"]
[ext_resource type="AudioStream" uid="uid://1gf0jh0gbx20" path="res://art/390771__d00121058__fx_013_sword_contact_stone_1.wav" id="6_6tfmg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vjnaq"]
atlas = ExtResource("3_21gcd")
region = Rect2(34, 0, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_eq3ih"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_awg00")
}],
"loop": true,
"name": &"iron",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjnaq")
}],
"loop": true,
"name": &"no_iron",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w4s8r"]
radius = 19.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e15sv"]
radius = 18.3473

[node name="cobalt" type="Node2D" node_paths=PackedStringArray("inventory_manager")]
script = ExtResource("1_2h2iy")
inventory_manager = NodePath("AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_eq3ih")
animation = &"iron"

[node name="Area2D" type="Area2D" parent="AnimatedSprite2D"]

[node name="pickableareairon" type="Area2D" parent="."]
script = ExtResource("4_30e3k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickableareairon"]
shape = SubResource("CircleShape2D_w4s8r")

[node name="iron_collectable" parent="pickableareairon" instance=ExtResource("5_tkbfo")]
visible = false

[node name="respawn_timeriron" type="Timer" parent="."]
wait_time = 30.0

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
metadata/iron = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1.03558, 1.03558)
shape = SubResource("CircleShape2D_e15sv")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_6tfmg")

[connection signal="body_exited" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="pickableareairon" to="pickableareairon" method="_on_body_entered"]
[connection signal="body_exited" from="pickableareairon" to="pickableareairon" method="_on_body_exited"]
[connection signal="timeout" from="respawn_timeriron" to="." method="_on_respawn_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
